--- a/ templates/index.html
+++ b/ templates/index.html
@@ -42,8 +42,9 @@
 </head>
 <body>
 <div class="python">
-    <h1 id="h1-text">H1 text</h1>
+    <h1 id="h1-text">H1 text 1</h1>
     <h1>H1 text 2</h1>
+    <h1>H11 text 2</h1>
     <h2 class="h2-text">H2 text</h2>
     <h6 class="h2-text h6-text">H6 text</h6>
     <p>Everything you find here has been specially created by <span style="color: green">the British Council</span>,
@@ -100,6 +101,11 @@
 <div class="java-script">
      <a href="https://www.python.org/downloads/" target="_blank">JavaScript</a>
     <h2 class="h2-text">H2 text</h2>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
 </div>
 </body>
 </html>
